Visited links no longer hidden when a video is expanded

--- a/ytui.css
+++ b/ytui.css
@@ -9,7 +9,7 @@ img{margin:5px;float:left;}
   text-align:center;
   max-width: 45%;
 }
-a:visited{color:lightgray;}
+div[collapse=yes] a:visited{color:lightgray;}
 input{width:6em;}
 li,button{margin:.25em;}
 .title,a,div[collapse=no] *{display:inline;}
