Updating YTUI.js

--- a/ytui.css
+++ b/ytui.css
@@ -13,3 +13,5 @@ div[collapse=yes] a:visited{color:lightgray;}
 input{width:6em;}
 li,button{margin:.25em;}
 .title,a,div[collapse=no] *{display:inline;}
+#filterquery{margin:1em 0em .75em 0em;height:5em;display:block;width:30em;}
+#querybox button{display:none;}
